# Generate_TestCode_Copilot

./: .gitignore  CMakeLists.txt  README.md  run.bat
.github/agents/: UT_Support.agent.md
.github/prompts/: Testing_Rules.md  plan-googleTestWorkflow.prompt.md  reviewing_Rules.md
inc/: AccountManager.hpp  Calculator.hpp  Device_Smartphone.hpp  ExternalServices.hpp  Math.hpp  TransactionProcessor.hpp
reports/: coverage_calculator.html
reports/report/: coverage.AccountManager.cpp.2486bf96a760bc3c4e5d8d58c9c86fbb.html  coverage.AccountManager.cpp.9aa56c239b8bea4b7755f99ae1a8a3c8.html  coverage.TransactionProcessor.cpp.432aab2a30740ba59a0552c9aa1b9fb8.html  coverage.TransactionProcessor.cpp.ccf921cf58d5d0a8d7fabd9770af4a71.html  coverage.functions.html  coverage.html  coverage_limitations.txt
src/: AccountManager.cpp  Calculator.cpp  Device_Smartphone.cpp  Math.cpp  TransactionProcessor.cpp
test/: SWE4_AccountManager.cpp  SWE4_Calculator.cpp  SWE4_TransactionProcessor.cpp
